<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_storage_root_location"
        android:title="@string/pref_category_title_general">

        <xyz.illuminate.git.preference.Preference
            android:key="@string/pref_key_repo_root_location"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/preference_repo_location">
            <intent
                android:targetClass="xyz.illuminate.git.activities.explorer.ExploreRootDirActivity"
                android:targetPackage="xyz.illuminate.git" />
        </xyz.illuminate.git.preference.Preference>
        <ListPreference
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_ids"
            android:key="@string/pref_key_use_theme_id"
            android:persistent="true"
            android:title="@string/preference_use_theme">

        </ListPreference>
        <xyz.illuminate.git.preference.EditTextPreference
            android:key="@string/pre_key_quick_push_commit_msg"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/preference_quick_push_commit_msg"></xyz.illuminate.git.preference.EditTextPreference>
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_use_english"
            android:persistent="true"
            android:summary="@string/preference_eng_lang_summary"
            android:title="@string/preference_eng_lang"></SwitchPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_root_location"
        android:title="@string/pref_category_title_git_profile">

        <xyz.illuminate.git.preference.EditTextPreference
            android:key="@string/pref_key_git_user_name"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/preference_git_user_name"></xyz.illuminate.git.preference.EditTextPreference>

        <xyz.illuminate.git.preference.EditTextPreference
            android:inputType="textEmailAddress"
            android:key="@string/pref_key_git_user_email"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/preference_git_user_email"></xyz.illuminate.git.preference.EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_title_security">

        <Preference
            android:persistent="true"
            android:summary="@string/preference_manage_ssh_keys_summary"
            android:title="@string/preference_manage_ssh_keys">
            <intent
                android:targetClass="xyz.illuminate.git.activities.explorer.PrivateKeyManageActivity"
                android:targetPackage="xyz.illuminate.git" />
        </Preference>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_use_gravatar"
            android:persistent="true"
            android:summary="@string/preference_use_gravatar_summary"
            android:title="@string/preference_use_gravatar"></SwitchPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_title_about">

        <xyz.illuminate.git.preference.Preference
            android:summary="@string/preference_send_feedback_summary"
            android:title="@string/preference_send_feedback">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/feedback_url" />
        </xyz.illuminate.git.preference.Preference>

        <xyz.illuminate.git.preference.Preference
            android:key="@string/preference_key_app_version"
            android:persistent="true"
            android:selectable="false"
            android:summary="%s"
            android:title="@string/preference_app_version" />

    </PreferenceCategory>

</PreferenceScreen>
