<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_content_new"
        android:title="@string/action_clone"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import_repo"
        android:title="@string/action_import_repo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
